--- a/index.html
+++ b/index.html
@@ -101,59 +101,14 @@
 
     <!-- Detaillierte Prüfung -->
     <section class="section" id="detaillierte-pruefung">
-        <div class="category-section">
-            <div class="category-header">
-                <iconify-icon icon="mdi:eye" class="category-icon"></iconify-icon>
-                <h2>Wahrnehmbar</h2>
-            </div>
-            <div class="check-list">
-                <div class="check-item">
-                    <div class="check-header">
-                        <div class="check-title">
-                            <span class="check-id">1.1.1a</span>
-                            <h3>Alternativtexte für Bedienelemente</h3>
-                        </div>
-                        <div class="check-meta">
-                            <span class="check-ref">BITV 2.0: 1.1.1a | EN 301 549: 1.1.1a</span>
-                        </div>
-                    </div>
-                    <div class="check-status passed">
-                        <iconify-icon icon="mdi:check-circle" style="color: #28a745;"></iconify-icon>
-                        <span>Bestanden</span>
-                        <span class="check-message">Keine Fehler gefunden</span>
-                    </div>
-                </div>
-                
-                <div class="check-item has-error">
-                    <div class="check-header">
-                        <div class="check-title">
-                            <span class="check-id">1.3.1a</span>
-                            <h3>HTML-Strukturelemente für Überschriften</h3>
-                        </div>
-                        <div class="check-meta">
-                            <span class="check-ref">BITV 2.0: 1.3.1a | EN 301 549: 1.3.1a</span>
-                        </div>
-                    </div>
-                    <div class="check-status failed">
-                        <iconify-icon icon="mdi:close-circle" style="color: #dc3545;"></iconify-icon>
-                        <span>Nicht bestanden</span>
-                    </div>
-                    <div class="error-details">
-                        <div class="error-message">
-                            <iconify-icon icon="mdi:alert" style="color: #ffc107;"></iconify-icon>
-                            <span>Überschriftenebene übersprungen: von H0 zu H2 (1x)</span>
-                        </div>
-                        <div class="code-example">
-                            <pre><code>&lt;h2 id="aktuelle-meldungen" class="headline-2"&gt;Aktuelle Meldungen&lt;/h2&gt;</code></pre>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-header">
-                <h2>Detaillierte Prüfung</h2>
-                <p class="section-description">Vollständige Auflistung aller Prüfschritte und deren Ergebnisse</p>
-                <p>Dieser Bericht wurde automatisch generiert und entspricht den Anforderungen der BITV 2.0 und EN 301 549.</p>
-            </div>
+        <div class="section-header">
+            <h2>Detaillierte Prüfung</h2>
+            <p class="section-description">Vollständige Auflistung aller Prüfschritte und deren Ergebnisse</p>
+            <p>Dieser Bericht wurde automatisch generiert und entspricht den Anforderungen der BITV 2.0 und EN 301 549.</p>
+        </div>
+        
+        <div id="detailed-categories">
+            <!-- Hier werden die Kategorien dynamisch eingefügt -->
         </div>
     </section>
 
