Ändere die Sprache der HTML-Datei von Deutsch auf Englisch, aktualisiere die Texte in den Abschnitten und verbessere die Fehlerdarstellung im JavaScript. Füge neue CSS-Variablen für Typografie und Farben hinzu, um die Stile zu optimieren. Aktualisiere die Bitv-Checks, um die Lesbarkeit und Wartbarkeit des Codes zu verbessern.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,117 @@
         </div>
         
         <div id="detailed-categories">
-            <!-- Hier werden die Kategorien dynamisch eingefügt -->
+            <!-- Check Item 1: Info and Relationships -->
+            <div class="check-item has-error">
+                <div class="check-title">
+                    <span class="check-id">1.3.1</span>
+                    <h3>Info and Relationships</h3>
+                </div>
+                <div class="check-ref">BITV 2.0: 1.3.1 | EN 301 549: 1.3.1</div>
+                <div class="check-status failed">
+                    <iconify-icon icon="mdi:close-circle"></iconify-icon>
+                    <span>Nicht bestanden</span>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>No programmatically determinable label</span>
+                    </div>
+                    <div class="code-example">
+                        <code><input id="search-input" type="text" placeholder="Suchbegriff eingeben" class="block relative w-full"></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>No programmatically determinable label</span>
+                    </div>
+                    <div class="code-example">
+                        <code><input type="date" class="block relative disabled:opacity-75 focus:outline-none w-full disabled:cursor-not-allowed"></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>No programmatically determinable label</span>
+                    </div>
+                    <div class="code-example">
+                        <code><input type="time" class="block relative disabled:opacity-75 focus:outline-none w-full disabled:cursor-not-allowed"></code>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Check Item 2: Info and Relationships (Heading Structure) -->
+            <div class="check-item">
+                <div class="check-title">
+                    <span class="check-id">1.3.1a</span>
+                    <h3>Info and Relationships (Heading Structure)</h3>
+                </div>
+                <div class="check-ref">BITV 2.0: 1.3.1a | EN 301 549: 1.3.1a</div>
+                <div class="check-status passed">
+                    <iconify-icon icon="mdi:check-circle" style="color: #28a745;"></iconify-icon>
+                    <span>Bestanden</span>
+                    <span class="check-message">Keine Fehler gefunden</span>
+                </div>
+            </div>
+
+            <!-- Check Item 3: Contrast (Minimum) -->
+            <div class="check-item has-error">
+                <div class="check-title">
+                    <span class="check-id">1.4.3</span>
+                    <h3>Contrast (Minimum)</h3>
+                </div>
+                <div class="check-ref">BITV 2.0: 1.4.3 | EN 301 549: 1.4.3</div>
+                <div class="check-status failed">
+                    <iconify-icon icon="mdi:close-circle"></iconify-icon>
+                    <span>Nicht bestanden</span>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>Contrast too low: 4.00 < 4.5</span>
+                    </div>
+                    <div class="code-example">
+                        <code><button type="submit" class="w-full ui-button ui-button--custom ui-button--xl ui-button--disabled"></button></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>Contrast too low: 4.00 < 4.5</span>
+                    </div>
+                    <div class="code-example">
+                        <code><button type="link" class="ui-button ui-button--custom ui-button--xl ui-teaser__button"></button></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>Contrast too low: 4.00 < 4.5</span>
+                    </div>
+                    <div class="code-example">
+                        <code><button type="link" class="ui-button ui-button--custom ui-button--xl ui-teaser__button"></button></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>Contrast too low: 4.00 < 4.5</span>
+                    </div>
+                    <div class="code-example">
+                        <code><button type="link" class="ui-button ui-button--custom ui-button--xl ui-teaser__button"></button></code>
+                    </div>
+                </div>
+                <div class="error-details">
+                    <div class="error-message">
+                        <iconify-icon icon="mdi:alert"></iconify-icon>
+                        <span>Contrast too low: 4.00 < 4.5</span>
+                    </div>
+                    <div class="code-example">
+                        <code><button type="link" class="ui-button ui-button--custom ui-button--xl ui-teaser__button"></button></code>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
