--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
-    <link rel="icon" href="public/favicon.png" type="image/svg+xml">
+    <title>BITV Audit Report</title>
+    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="icon" type="image/svg+xml" href="/public/logo.svg">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -226,6 +227,6 @@
         <div class="page-number"></div>
     </footer>
 
-    <script src="assets/script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
