Aktualisiere index.html mit neuen Links zu CSS- und Skriptdateien, füge Schriftarten hinzu und verbessere die Struktur. Ändere die Hintergrundfarben in script.js für bessere visuelle Klarheit. Refaktoriere styles.css mit neuen Schriftarten und verbesserten Layout-Styles für eine ansprechendere Darstellung. Konvertiere mehrere Dateien zu ES-Modulen und optimiere die Farbextraktion in colorExtractor.js. Verbessere die Protokollierungsfunktionen in logger.js und aktualisiere run-checks.js für eine bessere Modularität.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BITV Audit Report</title>
-    <link rel="stylesheet" href="/public/styles.css">
-    <link rel="icon" type="image/svg+xml" href="/public/logo.svg">
+    <title></title>
+    
+    <!-- Styles -->
+    <link rel="stylesheet" href="public/styles.css">
+    <link rel="icon" type="image/svg+xml" href="public/logo.svg">
+    
+    <!-- External Scripts -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -13,7 +17,7 @@
     <!-- Cover Page -->
     <section class="section" id="deckblatt">
         <header class="report-header">
-            <img src="assets/logo.svg" alt="Logo" class="logo">
+            <img src="public/logo.svg" alt="Logo" class="logo">
             <div class="report-title">
                 <h1>BITV Audit Report</h1>
                 <div class="subtitle">Accessibility Test</div>
@@ -227,6 +231,7 @@
         <div class="page-number"></div>
     </footer>
 
-    <script src="/public/script.js"></script>
+    <!-- Local Scripts -->
+    <script src="public/script.js"></script>
 </body>
 </html>
