Refactor accessibility check code and improve logging
- Updated fixSuggestion formatting in bitvChecks.js for better readability.
- Added missing commas in colorExtractor.js to ensure proper object structure.
- Enhanced logging messages in main.js for better user feedback during execution.
- Streamlined PDF report generation in PdfReportGenerator.js for improved clarity.
- Fixed URL path handling in generate-pdf.js for correct data retrieval.
- Improved helper functions in helpers.js for better code consistency.
- Enhanced logger.js to provide clearer output formatting.
- Refactored run-checks.js to improve error handling and maintainability.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="public/styles.css">
-    <link rel="icon" type="image/svg+xml" href="public/logo.svg">
     
     <!-- External Scripts -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
@@ -17,7 +16,7 @@
     <!-- Cover Page -->
     <section class="section" id="deckblatt">
         <header class="report-header">
-            <img src="public/logo.svg" alt="Logo" class="logo">
+            <img src="public/bitv-audit-tool-banner.png" alt="Logo" class="logo">
             <div class="report-title">
                 <h1>BITV Audit Report</h1>
                 <div class="subtitle">Accessibility Test</div>
@@ -43,7 +42,7 @@
                 <div class="conformity-container">
                     <ul class="conformity-list">
                         <li>BITV 2.0</li>
-                        <li>EN 301 549 V3.2.1 (2021-03)</li>
+                        <li id="conformity-date"></li>
                     </ul>
                 </div>
             </div>
